--- a/draft-rswg-rfc7990-updates.mkd
+++ b/draft-rswg-rfc7990-updates.mkd
@@ -40,17 +40,11 @@ informative:
 --- abstract
 
 In order to improve the readability of RFCs while supporting their archivability, the definitive version of the RFC Series transitioned from plain-text ASCII to XML using the RFCXML vocabulary; different publication versions are rendered from that base document.
-This document is the framework that provides the problem statement, lays out a road map of the documents that capture the specific requirements, and describes how RFCs are published.
+This document describes how RFCs are published.
 
 This document obsoletes RFC 7990.
 This document also updates the stability policy in RFC 9280.
 
-This draft is part of the RFC Series Working Group (RSWG); see <https://datatracker.ietf.org/edwg/rswg/documents/>.
-There is a repository for this draft at <https://github.com/paulehoffman/draft-rswg-rfc7990-updates>.
-
-<!-- PENDING ISSUES 
-
--->
 
 --- middle
 
