--- a/draft-rswg-rfc7990-updates.mkd
+++ b/draft-rswg-rfc7990-updates.mkd
@@ -1,6 +1,6 @@
 ---
-title: Updated RFC Format Framework
-abbrev: Format Framework
+title: RFC Formats and Versions
+abbrev: RFC Formats and Versions
 docname: draft-rswg-rfc7990-updates-10
 
 stand_alone: true
