--- a/draft-rswg-rfc7990-updates.mkd
+++ b/draft-rswg-rfc7990-updates.mkd
@@ -106,7 +106,7 @@ Section 7.6 of {{RFC9280}} currently says:
 
 This document replaces that sentence with:
 
-> Once published, RFC Series documents may be re-issued, but the semantic content of published documents shall be preserved to the greatest extent possible.
+> Once published, RFCs may be re-issued, but the semantic content of publication versions shall be preserved to the greatest extent possible.
 
 This document also creates a new policy that would exist in Section 7 of {{RFC9280}}:
 
