--- a/draft-rswg-rfc7990-updates.mkd
+++ b/draft-rswg-rfc7990-updates.mkd
@@ -179,7 +179,7 @@ The RPC will keep an archived set of all definitive versions of RFCs as well as 
 These archived sets must be available using the same access methods as for current definitive and publication versions.
 Every archived set shall record the date that a definitive and/or publication version was created or reissued.
 
-When the RPC archives documents, it does so in a manner that allows them to be found by people who want the historical (as compared to current) versions of those files.
+When the RPC archives definitive and publication versions, it does so in a manner that allows them to be found by people who want the historical (as compared to current) files.
 
 This document does not specify how archives are maintained or how archived documents might be located or identified.
 The methods for storage and access will be determined by the RPC in consultation with the technical community.
