--- a/draft-rswg-rfc7990-updates.mkd
+++ b/draft-rswg-rfc7990-updates.mkd
@@ -56,7 +56,7 @@ Based on the discussions with communities of interest, such as the IETF, the RFC
 
 This document is concerned with the production of RFCs, focusing on the published documents.
 It does not address any changes to the processes each stream uses to develop and review their submissions (specifically, how Internet-Drafts will be developed).
-While I-Ds have a similar set of issues and concerns, directly addressing those issues for I-Ds will be discussed within each document stream.
+While I-Ds have a similar set of issues and concerns, directly addressing those issues for I-Ds should be discussed within each document stream.
 
 The details described in this document are expected to continue to change over time as the community and the RFC Production Center (RPC) gains further experience implementing the policies described here.
 
@@ -92,7 +92,7 @@ This document uses two terms, "definitive version" and "definitive format", for 
 
 Other terminology changes made by this document are the following:
 - It changes the phrase "xml2rfc version 3" to "RFCXML".
-- It changes the name of the body that publishes RFCs from "RFC Editor" to "RFC Production Center (RPC)".
+- It changes the name of the body that publishes RFCs from "RFC Editor" to "RFC Production Center" (RPC).
 
 Historical text from {{RFC7990}} such as Section 2 ("Problem Statement"), Section 4 ("Overview of the Decision-Making Process"), and Section 10 ("Transition Plan") are not copied to this document.
 Text from {{RFC7990}} that repeated what was in other RFCs, particularly Section 8 (Figures and Artwork) and Section 9 (Content and Page Layout) were also removed.
@@ -121,7 +121,7 @@ This document also creates a new policy that would exist in Section 7 of {{RFC92
 The first RFC to be published following the guidance of the group of RFCs described in {{RFC7990}} was {{RFC8651}}, published in October 2019.
 In the time since then, all published RFCs have followed the general plan from {{RFC7990}}.
 
-At the highest level, the changes that {{RFC7990}} made to the RFC format involved breaking away from solely ASCII ({{RFC20}}) plain text and moving to a definitive format that includes all the information required for rendering a document into a wide variety of publication formats.
+At the highest level, the changes that {{RFC7990}} made to the RFC format involved breaking away from solely ASCII {{RFC20}} plain text and moving to a definitive format that includes all the information required for rendering a document into a wide variety of publication formats.
 The RPC became responsible for more than just the plain-text file and a PDF rendering that was created from the plain text at the time of publication; the RPC now creates the definitive version and three publication versions of the RFC in order to meet the diverse requirements of the community.
 
 The final RFCXML file produced by the RPC is the definitive version for RFCs; it holds all the information intended for an RFC.
